Feat: introduce camera fragments - both for passport scanning and qrcode scanning (#16)
Co-authored-by: Aaron DeRuvo <aaron.deruvo@clabs.co>